--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.2",
     "mongoose": "^6.8.3",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.0",
     "nodemon": "^2.0.20",
     "uuid": "^9.0.0"
   }
